App now runs exclusively in System Tray; package.json changed for creating .exe; readme updated

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "electron-quick-start",
+  "name": "electron-teams-links",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "Navigates to MS Teams links (channels or others)",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
@@ -9,12 +9,11 @@
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
     "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
+    "Microsoft",
+    "Teams"
   ],
-  "author": "GitHub",
+  "productName": "Teams Links",
+  "author": "Brent Grossman",
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^7.0.0"
